# Klaw

./: .env.example  .gitignore  AUTO_ITERATION_HANDOFF.md  Makefile  README.md  docker-compose.yml  fix-plan.md  plan.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03e760fba145_m1_initial_tables.py  3a1c7d8e5f22_m3_conversations.py  4b2e9a1c7d33_m4_system_settings.py  5d4e1a2b8f66_m6_memory_unique.py  9c2f1a7b4d10_m2_complete_apis.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agent_chat.py  agent_flows.py  auth.py  files.py  health.py  kb.py  local_agent.py  memories.py  notifications.py  providers.py  push_channels.py  schedules.py  system_settings.py  users.py
backend/app/core/: config.py  database.py  deps.py  embedding_config.py  es_client.py  llm_client.py  llm_config.py  minio_client.py  notify_client.py  reranker_client.py  scheduler.py  security.py  tei_client.py
backend/app/models/: __init__.py  agent_flow.py  base.py  chunk.py  conversation.py  document.py  execution.py  knowledge_base.py  memory.py  push_channel.py  schedule_job.py  system_setting.py  user.py  workspace_file.py
backend/app/schemas/: agent_flow.py  auth.py  common.py  conversation.py  file.py  knowledge_base.py  local_agent.py  memory.py  notification.py  provider.py  push_channel.py  schedule.py  system.py  user.py
backend/app/services/: agent_flow_service.py  deepdoc_service.py  document_service.py  execution_service.py  kb_service.py  local_agent_service.py  memory_service.py  push_channel_service.py  user_service.py
backend/app/utils/: crypto.py
backend/common/: settings.py  token_utils.py
backend/deepdoc/: __init__.py
backend/deepdoc/parser/: __init__.py
backend/rag/nlp/: rag_tokenizer.py
backend/rag/prompts/: __init__.py  generator.py
backend/scripts/: eval_real_vector.py  eval_retrieval.py
backend/tests/: conftest.py  test_agent_chat.py  test_agent_flows.py  test_auth.py  test_crypto.py  test_deepdoc_service.py  test_es_bulk.py  test_execution_control.py  test_execution_engine.py  test_health.py  test_kb.py  test_llm_client.py  test_llm_fallback.py  test_m4.py  test_negative_cases.py  test_new_apis.py  test_notify_client.py  test_retrieval_unit.py  test_scheduler_callback.py  test_system_settings.py
deepdoc/: README.md
docs/: FEATURE_READINESS.md  PRD_v2.md
frontend/: Dockerfile  package-lock.json  package.json  (+1 more)
(+35 files in other folders)
