[project]
name = "claw-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "apscheduler>=3.10,<4.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "cn2an==0.5.22",
    "elasticsearch[async]>=8.0.0,<9.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.23.0",
    "infinity-sdk==0.7.0",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "minio>=7.2.20",
    "numpy>=1.26.0,<2.0.0",
    "onnxruntime>=1.27.0",
    "opencv-python-headless==4.10.0.84",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0,<3.0.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0,<13.0.0",
    "psycopg2-binary>=2.9",
    "pyclipper>=1.4.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "redis>=8.0.1",
    "roman-numbers==1.0.2",
    "scikit-learn==1.5.0",
    "shapely==2.0.5",
    "six==1.16.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "sse-starlette>=3.4.5",
    "tiktoken==0.7.0",
    "uvicorn[standard]>=0.51.0",
    "word2number==1.1",
    "xgboost==1.6.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
eval = [
    "sentence-transformers>=2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
